fixed the white space before the animation

--- a/src/Components/aboutUs/aboutUs.module.css
+++ b/src/Components/aboutUs/aboutUs.module.css
@@ -3,6 +3,7 @@
   align-items: center;
   justify-content: center;
   margin: 4rem 0;
+  overflow: hidden;
 }
 
 .mv {
@@ -11,7 +12,6 @@
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  /* border: 1px solid green; */
 }
 
 .jol,
