--- a/src/Components/events/events.module.css
+++ b/src/Components/events/events.module.css
@@ -6,22 +6,26 @@
   width: 100%;
   margin-bottom: 2rem;
   height: 60vh;
-  transform: translateY(300px);
-  opacity: 0;
-  transition: all 1s ease-in-out;
+
+  overflow: hidden;
 }
 .slideIn {
   transform: translateY(0) !important;
   opacity: 1 !important;
 }
+
 .eventsContainer {
   display: flex;
   align-items: center;
   justify-content: center;
   height: 50vh;
   width: 100%;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   border-radius: 5px;
+  transform: translateX(300px);
+  opacity: 0;
+  transition: all 1s ease-in-out;
+  width: 100%;
 }
 .column1 {
   display: flex;
