--- a/src/Components/ministries/ministries.module.css
+++ b/src/Components/ministries/ministries.module.css
@@ -5,14 +5,10 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  transform: translateY(-300px);
-  opacity: 0;
-  transition: all 1s ease-in-out;
+
+  overflow: hidden;
 }
-.slideIn {
-  transform: translateY(0) !important;
-  opacity: 1 !important;
-}
+
 .ministryContainer {
   border-radius: 5px;
   overflow: hidden;
@@ -22,6 +18,9 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  transform: translateY(-300px);
+  opacity: 0;
+  transition: all 1s ease-in-out;
 }
 
 .frames {
